--- a/app/src/main/res/layout/activity_le_me_jump.xml
+++ b/app/src/main/res/layout/activity_le_me_jump.xml
@@ -7,26 +7,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="test.aktor.me.test.Hello">
+    tools:context="test.aktor.me.test.LetMeJump">
 
     <TextView
-        android:id="@+id/tv_output"
-        android:textSize="32dp"
         android:text="@string/hello_world"
+        android:id="@+id/tv_elaborate"
+        android:textSize="24dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-    <EditText
-        android:id="@+id/in_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
     <Button
-        android:id="@+id/btn_update"
-        android:text="Update"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <Button
-        android:text="Next"
-        android:id="@+id/btn_next"
+        android:text="Ok"
+        android:id="@+id/btn_ok"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
